<resources>
    <string name="app_name">Software Development Mobile</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="add">CALCULATE</string>
    <string name="enter_a_number2">Enter a number</string>
    <string name="result">Result</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="your_selection">Your selection:</string>
    <string name="home">Home</string>
    <string name="subtract">Subtract</string>
    <string name="add2">Add</string>
    <string name="shop">Shop</string>
    
    <string-array name="items">
        <item>Modulus</item>
        <item>Exponent</item>
        <item>Square root</item>
    </string-array>
    
    <string-array name="prices">
        <item>0.99€</item>
        <item>1.50€</item>
        <item>2.00€</item>
    </string-array>

    <string-array name="descriptions">
        <item>Modulus calculations made easy</item>
        <item>Get your exponent calculations right all the time</item>
        <item>We all hate square root, that is why we are offering it for you for a cheap price</item>
    </string-array>

</resources>